k8s/gateway-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-metrics-service
  namespace: pinit
spec:
  selector:
    app: pinit-gateway
  ports:
    - protocol: TCP
      port: 9095
      targetPort: 9095
  type: NodePort
